# ULMlang

./: .gitignore  Cargo.toml  LICENSE  groups  project.config  rustfmt.toml
.github/workflows/: rust.yml
src/: build.rs  ir.rs  lib.rs  linearity.rs
src/parser/: mod.rs  parser.lalrpop  parser.rs
